src/scss/03_elements/_elements.code.scss
.lia-code {
  font-family: $global-font-mono;
  margin-bottom: 2rem;

  &--block {
    > *:not(:last-child) {
      margin-bottom: 1rem;
    }
  }

  &--inline {
    border: 1px solid rgb(var(--color-highlight-dark));
    color: rgb(var(--color-highlight-dark));
    margin-bottom: 0;
    padding: 0 0.5rem;
    word-break: break-word;
  }

  &-control {
    align-items: center;
    color: rgb(var(--color-highlight));
    display: flex;
    font-size: 1.8rem;
    padding: 0 0.5rem;

    &__action {
      margin-right: auto;
    }

    &__version {
      display: flex;
      align-items: center;

      > *:not(:last-child) {
        margin-right: 0.5rem;
      }
    }
  }

  &-terminal {
    background-color: rgb(var(--lia-black));
    display: flex;
    flex-direction: column;

    &__input {
      align-items: center;
      background-color: rgba(var(--lia-white), 0.1);
      border-radius: $global-radius;
      border: 1px solid rgba(var(--lia-white), 0.5);
      color: rgb(var(--lia-white));
      display: flex;
      margin: 1rem 1.6rem;
      padding: 0 0.8rem;

      input {
        background-color: transparent;
        border: 0;
        color: rgb(var(--lia-white));
        line-height: inherit;
        width: 100%;
      }
    }

    &__output {
      background: linear-gradient(
        135deg,
        rgb(var(--lia-black)),
        rgb(var(--lia-black)) calc(100% - 1.25rem),
        rgb(var(--color-highlight-dark)) 0%
      );
      margin: 0;
      // when this value is changed, also the maxHeight value in
      //   src/typescript/webcomponents/terminal.ts
      // has to be changed accordingly
      max-height: 20rem;
      resize: vertical;
      overflow-y: auto;
      padding: 1rem 1.6rem;
      white-space: pre;

      // highlight the resize handler on chrome
      &::-webkit-resizer {
        background: linear-gradient(
          135deg,
          rgb(var(--lia-anthracite)),
          rgb(var(--lia-anthracite)) 50%,
          rgb(var(--color-highlight-dark)) 0%
        );
      }
    }
  }

  &__input {
    border: 1px solid rgb(var(--color-highlight));
    position: relative;
  }

  &__min-max {
    bottom: 0;
    color: rgb(var(--color-highlight));
    font-size: 2rem;
    position: absolute;
    right: 2rem;
    z-index: 10;
  }

  &__copy {
    top: 0.1rem;
    font-size: 2rem;
    position: absolute;
    right: 1.5rem;
    z-index: 100;
    padding: 0rem 0.25rem;
    color: rgb(var(--color-highlight), 0.4);

    &:hover {
      top: 0;
      color: rgb(var(--color-highlight));
      font-size: 2.2rem;

      // background-color: rgb(var(--color-background), 0.5) !important;
    }
  }

  &__copy--inverted {
    top: 0.1rem;
    font-size: 2rem;
    right: 1.5rem;
    z-index: 100;
    padding: 0rem 0.25rem;
    color: rgb(var(--color-background), 0.4);

    &:hover {
      top: 0;
      color: rgb(var(--color-highlight));
      font-size: 2.2rem;
      //background-color: rgb(var(--color-highlight-dark), 0.5) !important;
    }
  }
}

.ace_editor {
  max-height: calc(
    var(--max-editor-line-count) *
      (
        calc(var(--global-font-size, 1.5rem) * var(--font-size-multiplier)) *
          1.47
      )
  ) !important;
  font-size: calc(
    var(--global-font-size, 1.5rem) * var(--font-size-multiplier)
  ) !important;

  height: auto !important;
}

.ace_mobile-menu {
  display: none !important;
}

